# Numerikk

./: .gitignore  README.md  generate_mesh_first.py  generate_mesh_first.py~  quadratures.py  quadratures.py~  script_test.py  some_functions.py  test.py  test.py~
Visco/: blasiusFlow.py  blasiusSolution.py  blasius_integration.py
fourier/: fourier.i  fourier.py  setup.py  test_fourier.py
fourier/include/: conservationlaw.hpp  flux_function.hpp  fourier.hpp
fourier/src/: flux_function.cpp  fourier.cpp
learn_blas/: Makefile  blas_w_c  blas_w_c.cpp  dotproduct  dotproduct.cpp  matrixproduct.cpp
learn_c/: Makefile  ex10  ex10.c  ex11  ex11.c  ex12  ex12.c  ex13.c  ex14  ex14.c  ex15  ex15.c  ex16  ex16.c  ex17  ex17.c  ex18  ex18.c  ex19  ex19.c  ex19.h  ex4.c  ex7.c  ex8.c  ex9.c  object.c  object.h
mesh/: .gitignore  CMakeLists.txt
mesh/include/: mesh_base.h  triangle.h  unit_square.h
mesh/src/: CMakeLists.txt  mesh_base.cpp  triangle.c
mesh/tests/: testtriangulateio.cpp
numlinalg/: CMakeLists.txt  Makefile  testing  testing.cpp  tridiag.cpp  tridiag.h
numlinalg/include/: cubicsplineproblem.h  plotter.h  poisson1d.h  tridiag.h
numlinalg/inputfiles/: testspline.txt
numlinalg/src/: CMakeLists.txt  cubicsplineproblem.cpp  poisson1d.cpp  tridiag.cpp
numlinalg/tests/: testing.cpp  testpoisson.cpp  testspline.cpp
plotter/: CMakeLists.txt  plotter.h
plotter/include/: plotter.h
plotter/src/: CMakeLists.txt  plotter.cpp
polynomials/: polynomial.i  polynomial.py  setup.py  test_polynomial.py
polynomials/include/: polynomial.hpp
polynomials/src/: polynomial.cpp
